name:                assign2-haskell
version:             0.1.0.0
synopsis:            Autograder for Haskell Assignment
license-file:        LICENSE
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Assign2
  other-modules:       ModifiedPrelude
  -- other-extensions:
  build-depends:       array, base

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  other-modules:    Common
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    random,
                    tasty,
                    tasty-hunit,
                    assign2-haskell                    
